src/test/ui/issue-22644.stderr
error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:16:33
   |
16 |     println!("{}", a as usize < b);
   |                               - ^ interpreted as generic argument
   |                               |
   |                               not interpreted as comparison
   |
help: if you want to compare the casted value then write:
   |
16 |     println!("{}", (a as usize) < b);
   |                    ^^^^^^^^^^^^

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:21:20
   |
20 |                    <
   |                    - not interpreted as comparison
21 |                    4);
   |                    ^ interpreted as generic argument
   |
help: if you want to compare the casted value then write:
   |
17 |     println!("{}", (a
18 |                    as
19 |                    usize)
   |

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:30:20
   |
29 |                    <
   |                    - not interpreted as comparison
30 |                    5);
   |                    ^ interpreted as generic argument
   |
help: if you want to compare the casted value then write:
   |
22 |     println!("{}", (a
23 | 
24 | 
25 |                    as
26 | 
27 | 
 ...

error: aborting due to 3 previous errors

